Update HTML to show chat only

--- a/html/chatClient.html
+++ b/html/chatClient.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The App</title>
   <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
@@ -16,7 +18,7 @@
 
   Messages:
   <div id='messages'></div>
-  <input type='text' placeholder='Send a message' id='msgBox'>
+  <input type='text' placeholder='Send a message' id='messageBox'>
   <input type='button' id="send_button" value='Send'>
   <input type='button' id="clear_button" value='Clear'>
 
