--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Log In | The App</title>
-        <link rel="stylesheet" type="text/css" href="../styles/login-styles.css">
+        <link rel="stylesheet" type="text/css" href="../styles/user-auth-styles.css">
     </head>
 
     <body>
