--- a/html/signupPage.html
+++ b/html/signupPage.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sign Up | The App</title>
-        <link rel="stylesheet" type="text/css" href="../styles/signup-styles.css">
+        <link rel="stylesheet" type="text/css" href="../styles/user-auth-styles.css">
     </head>
 
     <body>
