Made button ID's more specific and added source .js files

--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -27,10 +27,15 @@
                 </div>
 
                 <div class="login-modal-submit">
-                    <button type="button" id="submit-button">Log In</button>
+                    <button type="button" id="login-submit-button">Log In</button>
+                    <p id="error-message"></p>
                     <p>Don't have an account? <a href="signupPage.html">Sign Up</a></p>
                 </div>
             </div>
         </div>
+    
+        <script src='eventListeners.js'></script>
+        <script src='buttonHandlers.js'></script>
+
     </body>
 </html>
